// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packages should compile index for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/package-1 v0.0**

***

# PACKAGE 1 README

Readme content
"
`;

exports[`Packages should compile index for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"**packages-example**

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Packages should compile index for packages: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**packages-example**

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Packages should compile index page for member packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**packages-example**](../../index.md)

***

[packages-example](../../packages.md) / @scope/package-1

# PACKAGE 1 README

Readme content

Comments for package-1

Some more comments for package-1

## Interfaces

- [PackageInterface](interfaces/PackageInterface.md)
"
`;

exports[`Packages should compile index page for member packages: (Output File Strategy "members") (Option Group "1") 2`] = `
"[**packages-example**](../index.md)

***

[packages-example](../packages.md) / package-2

# PACKAGE 2 README

Readme content

## Modules

- [module-1](module-1/index.md)
- [module-2](module-2/index.md)
"
`;

exports[`Packages should compile index page for member packages: (Output File Strategy "members") (Option Group "1") 3`] = `
"[**packages-example**](../../index.md)

***

[packages-example](../../packages.md) / @scope/package-3

# @scope/package-3

## Documents

- [Package Document 1](documents/Package-Document-1.md)

## Modules

- [index](index/index.md)
- [module-1](module-1/index.md)
- [module-2](module-2/index.md)
"
`;

exports[`Packages should compile index page for module packages: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**packages-example**](../index.md)

***

[packages-example](../packages.md) / @scope/package-1

# PACKAGE 1 README

Readme content

Comments for package-1

Some more comments for package-1

## Interfaces

### PackageInterface

#### Properties

##### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile index page for module packages: (Output File Strategy "modules") (Option Group "1") 2`] = `
"[**packages-example**](../index.md)

***

[packages-example](../packages.md) / package-2

# PACKAGE 2 README

Readme content

## Modules

- [module-1](module-1.md)
- [module-2](module-2.md)
"
`;

exports[`Packages should compile index page for module packages: (Output File Strategy "modules") (Option Group "1") 3`] = `
"[**packages-example**](../../index.md)

***

[packages-example](../../packages.md) / @scope/package-3

# @scope/package-3

## Documents

- [Package Document 1](documents/Package-Document-1.md)

## Modules

- [index](index-1.md)
- [module-1](module-1.md)
- [module-2](module-2.md)
"
`;

exports[`Packages should compile member for relative entry module package: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**packages-example**](../../../index.md)

***

[packages-example](../../../packages.md) / [package-6](../../../package-6.md) / [module1](../../../package-6.md) / PackageInterface1

# Interface: PackageInterface1
"
`;

exports[`Packages should compile member page for a single package: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**@scope/package-1 v0.0**](../README.md)

***

[@scope/package-1](../packages.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**packages-example**](../../../index.md)

***

[packages-example](../../../packages.md) / [@scope/package-1](../index.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile member page for packages: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**packages-example v0.0**](../../README.md)

***

[packages-example](../../README.md) / [@scope/package-1](../README.md) / PackageInterface

# Interface: PackageInterface

## Properties

### prop

> **prop**: \`string\`
"
`;

exports[`Packages should compile packages index: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**packages-example**](index.md)

***

# packages-example

## Documents

- [Project Document 1](documents/Project-Document-1.md)

## Packages

- [@scope/package-1 - v1.0.0](@scope/package-1/index.md)
- [@scope/package-3](@scope/package-3/index.md)
- [package-1b](package-1b/index.md)
- [package-2 - v1.0.0](package-2/index.md)
- [package-4](package-4/index.md)
- [package-5](package-5/package-5.md)
- [package-6](package-6.md)
- [package-7](package-7/index.md)
"
`;

exports[`Packages should compile packages index: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**packages-example**](index.md)

***

# packages-example

## Documents

- [Project Document 1](documents/Project-Document-1.md)

## Packages

- [@scope/package-1 - v1.0.0](@scope/package-1.md)
- [@scope/package-3](@scope/package-3/index.md)
- [package-1b](package-1b.md)
- [package-2 - v1.0.0](package-2/index.md)
- [package-4](package-4.md)
- [package-5](package-5/package-5.md)
- [package-6](package-6.md)
- [package-7](package-7/index.md)
"
`;

exports[`Packages should compile relative entry module package: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**packages-example**](index.md)

***

[packages-example](packages.md) / package-6 / module1

# module1

## Interfaces

- [PackageInterface1](package-6/module1/interfaces/PackageInterface1.md)
"
`;
